--- a/src/styles/projects/_index.scss
+++ b/src/styles/projects/_index.scss
@@ -31,11 +31,6 @@
       width: 30rem;
       border-radius: var(--_card-border-radius) 0 0 var(--_card-border-radius);
       object-fit: cover;
-
-      &:nth-of-type(even) {
-        border: 2px solid red;
-        
-      }
     }
 
     .product-information {
@@ -53,60 +48,18 @@
       }
 
       .project-technologies {
-        --_product-tech-size: 3rem;
-
-        $total: 8;
-        --_total-tech-icons: 8;
-        --_step-duration: 10000ms;
-        --_icon-space-between: 150ms;
-        // --_step-slice-amount: 
-        --_total-duration: calc(var(--_step-duration) * var(--_total-tech-icons));
-        --_icon-dalay: calc(var(--_total-duration) / 10);
-
-        $animation-step-one: 0%, 100%;
-        $animation-step-two: 0%, calc((var(--_icon-dalay) / 10) * 1%);
-        $animation-step-two: 0%, calc((var(--_icon-dalay) - (var(--_icon-dalay) / 10)) * 1%);
-        $animation-step-two: 0%, calc(var(--_icon-dalay) * 1%);
-
-        border: 2px solid lime;
-        height: var(--_product-tech-size);
-        position: relative;
-
-        @for $i from 0 to $total {
-          .product-tech-icon:nth-child(#{$i + 1}) {
-            --_icon-animation-delay: calc((var(--_step-duration) / var(--_total-tech-icons)) * #{$i});
-          }
-        }
-
-        &:hover .product-tech-icon {
-          animation: product-tech-icon var(--_step-duration) linear var(--_icon-animation-delay) infinite;
-        }
-
+        
+        display: flex;
+        flex-wrap: wrap;
+        gap: .5rem;
+        width: 70%;
+        
         .product-tech-icon {
+          --_icon-size: 2.5rem;
           
-          position: absolute;
-          height: var(--_product-tech-size);
-          width: var(--_product-tech-size);
+          height: var(--_icon-size);
+          width: var(--_icon-size);
           aspect-ratio: 1 / 1;
-          opacity: 0;
-        }
-
-        @keyframes product-tech-icon {
-          0% { 
-            opacity: 0; 
-            left: 0%;
-          }
-          10% { 
-            opacity: 1; 
-          }
-          90% { 
-            opacity: 1; 
-          }
-          100% { 
-            opacity: 0; 
-            left: calc(100% - var(--_product-tech-size));
-            // animation-timing-function: step-end;
-          }
         }
       }
 
