--- a/src/styles/navbar/_index.scss
+++ b/src/styles/navbar/_index.scss
@@ -1,34 +1,10 @@
 
 @use "../variables" as *;
 
-@property --gradient-angle {
-    syntax: "<angle>";
-    initial-value: 45deg;
-    inherits: false;
-}
-
-.navbar-menu-icon {
-    display: none;
-
-    @media (width <= $mobile-width) {
-        display: block;
-        --_unit: 2rem;
-        position: absolute;
-        inset: 1rem 1rem auto auto;
-        height: var(--_unit);
-        width: var(--_unit);
-        z-index: 250;
-        cursor: pointer;
-    }
-}
-
 .navbar {
-    --_menu-translate-right: 100;
-
     --_nav-spacer: var(--spacer-2);
     --_nav_transition-duration: 400ms;
     --_nav-transition-timming: ease;
-    --_nav-background: hsl(247, 100%, 6%);
     --_nav-gradient-background: linear-gradient(45deg, blue, purple);
 
     position: relative;
@@ -37,26 +13,6 @@
 
     height: var(--navbar-height);
 
-    // Styles mobile only
-    @media (width <= $mobile-width) {
-        display: none;
-        position: fixed;
-        right: 0;
-        height: 100%;
-        width: min(calc(100% - 5rem), 25rem);
-        z-index: 200;
-        background: hsl(247 100% 6% / .5);
-        backdrop-filter: blur(.5rem);
-
-        flex-direction: column;
-        padding-top: calc(var(--_nav-spacer) * 5);
-        padding-inline: calc(var(--_nav-spacer) * 2);
-
-        transition: transform ease-out var(--_nav_transition-duration);
-        transform: translateX(calc(var(--_menu-translate-right) * 1%));
-    }
-
-    // Styles desktop only
     @media (width >= $mobile-width) {
         width: min(calc(100% - var(--spacer-5)), var(--app-max-width));
         font-size: 1rem;
@@ -68,10 +24,6 @@
         list-style: none;
         align-items: center;
         margin-left: auto;
-
-        @media(width >= $tablet-width) {
-            gap: calc(var(--_nav-spacer) * 3); 
-        }
 
         @media(width <= $mobile-width) {
             flex-direction: column;
@@ -123,7 +75,7 @@
                 }
             }
 
-            [link-attribute] {
+            .link {
                 display: grid;
                 place-items: center;
 
@@ -143,8 +95,8 @@
         isolation: isolate;
         position: fixed;
         inset: auto 2rem 2rem auto;
-        height: 3.5rem;
-        width: 3.5rem;
+        height: 3rem;
+        width: 3rem;
         padding: .5rem;
         border-radius: 50%;
         border: none;
@@ -160,13 +112,13 @@
             &::after {
                 content: "";
                 position: absolute;
-                inset: -.175rem;
+                inset: -.125rem;
                 border-radius: inherit;
                 z-index: -2;
                 background: var(--app-background-gradient);
                 opacity: .5;
 
-                animation: slide-up-btn 500ms ease 300ms;
+                animation: slide-up-btn 700ms ease 300ms;
                 @keyframes slide-up-btn {
                     0% { 
                         transform: scale(1); 
@@ -174,7 +126,7 @@
                     }
                     50% { 
                         transform: scale(2.5); 
-                        opacity: .2;
+                        opacity: .075;
                     }
                     100% { 
                         transform: scale(1); 
@@ -182,7 +134,6 @@
                     }
                 }
             }
-
         }
 
         &::before {
@@ -194,16 +145,21 @@
             z-index: -1;
         }
 
-        &:hover .slide-up-text { transform: scale(1); }
+        &:hover .slide-up-text { 
+            opacity: 1;
+            transform: scale(1); 
+
+            transition: transform 150ms ease-out;
+        }
         .slide-up-text {
             position: absolute;
-            inset: -2rem 0 auto 0;
-            margin: auto;
+            inset: -2rem auto auto 50%;
             width: max-content;
             color: var(--primary-text-color);
             font-size: 1rem;
-            
-            transition: transform 150ms ease-out;
+    
+            opacity: 0;
+            translate: -50% -50%;
             transform: scale(0);
         }
 
@@ -211,5 +167,6 @@
             height: 100%;
             width: 100%;
         }
+
     }
 }
